--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Első weboldalam</title>
 </head>
 <body>
-    <h1>Hello első oldalam</h1>
+    <h1>Hello első oldalam!</h1>
 
 </body>
 </html>
